<resources>
    <string name="app_name">Evolution</string>
    <string name="action_settings">Settings</string>
    <string name="name_max">MÁXIMO</string>
    <string name="measure_default">0.0</string>
    <string name="name_min">MÍNIMO</string>
    <string name="measure_kg_default">0.0 kg</string>
    <string name="date_default">01/01/2000</string>
    <string name="txt_date">Data</string>
    <string name="toast_no_measurement">Nenhuma medição foi incluída</string>
    <string name="label_measurement">Medições</string>
    <string name="label_add_measurement">Cadastrar medição</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4742990886313740/7474571711</string>
    <string name="banner_ad_unit_id">ca-app-pub-4742990886313740/7195370113</string>
    <string name="banner_ad_unit_id_test">9974375913FEA04A8D547ADDDC0A0E0C</string>
    <string name="preference_file_key">preference_login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
