<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".fragment.ChartFragment">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nScrollView"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cvWeight"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/llChart"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/llDate"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15sp"
                        android:text="@string/date_default"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/mbsMeasureType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:id="@+id/llMeasuresActual"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tvMeasure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:text="@string/measure_kg_default"/>

                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/measure_kg_default"/>

                </LinearLayout>

                <com.db.chart.view.LineChartView
                    android:id="@+id/chart"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <LinearLayout
                    android:id="@+id/llMinAndMax"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/llMin"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingStart="0dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="50dp"
                        android:paddingEnd="50dp">

                        <TextView
                            android:id="@+id/tvMinTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/name_min"/>
                        <TextView
                            android:id="@+id/tvMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/measure_default"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llMax"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tvMaxTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/name_max"/>
                        <TextView
                            android:id="@+id/tvMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="@string/measure_default"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_plus" />

</FrameLayout>
